versioned_docs/version-2025.2.5/professor/diego_armando_amaro_da_silva.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Diego Armando Amaro da Silva",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Culturas II - 1091",
          "size": 3,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Topografia e Geoprocessamento - 1467",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Culturas II - 1091",
          "size": 3,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2023"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Meteorologia e Bioclimatologia na Agropecuária - 631",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Tecnologia de Produtos de Origem Vegetal - 2220",
          "size": 2,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_6-2",
          "students": [
            "AGR2024"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Culturas II - 2221",
          "size": 4,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Culturas I - 1472",
          "size": 2,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Fertilidade, Manejo e Conservação dos Solos - 1473",
          "size": 2,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Agroecologia e Desenvolvimento Rural Sustentável - 2468",
          "size": 2,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Culturas I - 1472",
          "size": 2,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Fertilidade, Manejo e Conservação dos Solos - 1473",
          "size": 2,
          "teachers": [
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_7-2",
          "students": [
            "AGR2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Diego Armando Amaro da Silva

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

<div style={{
  border: '1px solid #ddd',
  borderRadius: '8px',
  padding: '16px',
  marginTop: '24px',
  backgroundColor: '#f9f9f9'
}}>
  <h2 style={{
    borderBottom: '2px solid #ccc',
    paddingBottom: '8px',
    marginBottom: '16px'
  }}>Informações do Docente</h2>
  <p><strong>Cargo/Função:</strong> {data.teacherInfo.role}</p>
  <p><strong>Horário de Atendimento aos Alunos:</strong> {data.teacherInfo.officeHours}</p>
  <p><strong>Observações:</strong> {data.teacherInfo.notes}</p>
</div>

